--- a/javascript/goit-js-hw-10/package.json
+++ b/javascript/goit-js-hw-10/package.json
@@ -14,10 +14,10 @@
     "url": "git+https://github.com/luxplanjay/webpack-starter-kit.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Piter Ivanov <ivanov.pite.86@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/luxplanjay/webpack-starter-kit/issues"
+    "url": "https://github.com/IP777/goit-fe-course/issues"
   },
   "homepage": "https://github.com/IP777/goit-fe-course/tree/master/javascript/goit-js-hw-10#readme",
   "devDependencies": {
