--- a/javascript/goit-js-hw-10/package.json
+++ b/javascript/goit-js-hw-10/package.json
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/luxplanjay/webpack-starter-kit.git"
   },
   "keywords": [],
-  "author": "Piter Ivanov <ivanov.pite.86@gmail.com>",
+  "author": "Piter Ivanov <ivanov.piter.86@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/IP777/goit-fe-course/issues"
